Other th:ref changed

--- a/beanhub/src/main/resources/templates/System_manager/attendants.html
+++ b/beanhub/src/main/resources/templates/System_manager/attendants.html
@@ -14,7 +14,7 @@
             <a th:href="@{/System_manager/dashboard}">Dashboard</a>
             <a th:href="@{/System_manager/machines}">Machines Management</a>
             <a th:href="@{/System_manager/attendants}" style="background-color: #f0f2f5;">Attendants Management</a>
-            <a th:href="@{/attendant/login}" style="color: #dc3545; margin-top: 20px;">Logout</a>
+            <a th:href="@{/System_manager/login}" style="color: #dc3545; margin-top: 20px;">Logout</a>
         </nav>
 
         <main class="content">
