--- a/beanhub/src/main/resources/templates/System_manager/machines.html
+++ b/beanhub/src/main/resources/templates/System_manager/machines.html
@@ -14,7 +14,7 @@
             <a th:href="@{/System_manager/dashboard}">Dashboard</a>
             <a th:href="@{/System_manager/machines}" style="background-color: #f0f2f5;">Machines Management</a>
             <a th:href="@{/System_manager/attendants}">Attendants Management</a>
-            <a th:href="@{/}" style="color: #dc3545; margin-top: 20px;">Logout</a>
+            <a th:href="@{/System_manager/login}" style="color: #dc3545; margin-top: 20px;">Logout</a>
         </nav>
 
         <main class="content">
