--- a/beanhub/src/main/resources/templates/System_manager/login.html
+++ b/beanhub/src/main/resources/templates/System_manager/login.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manager Login</title>
+    <title th:text = "#{login.title}">Manager Login</title>
     <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
 
     <div class="card">
-        <h2>System Manager Login</h2>
+        <h2 th:text = "#{login.title}">System Manager Login</h2>
         <form th:action="@{/System_manager/dashboard}" method="get">
             <div class="form-group">
-                <label for="username">Username</label>
+                <label for="username" th:text = "#{login.username}">Username</label>
                 <input type="text" id="username" name="username" required>
             </div>
             <div class="form-group">
-                <label for="password">Password</label>
+                <label for="password" th:text = "#{login.password}">Password</label>
                 <input type="password" id="password" name="password" required>
             </div>
-            <button type="submit">Login</button>
+            <button type="submit" th:text = "#{login.button}">Login</button>
         </form>
     </div>
 
