--- a/beanhub/src/main/resources/templates/Screen_distributor/index.html
+++ b/beanhub/src/main/resources/templates/Screen_distributor/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang = "en" xmlns:th="https://www.thymeleaf.org">
+<html lang = "en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset = "ITF-8">
     <meta name = "viewport" content = "width=device-width, inital-scale=1.0">
