--- a/beanhub/src/main/resources/templates/System_manager/dashboard.html
+++ b/beanhub/src/main/resources/templates/System_manager/dashboard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,7 +26,7 @@
         <main class="content">
             <div class="card">
                 <h2 th:text = "#{manager.dashboard.welcome_header}">Welcome Manager!</h2>
-                <p th:text = "#{manager.dashboard.welcoem_text}">Select an item from the menu on the left to get started.</p>
+                <p th:text = "#{manager.dashboard.welcome_text}">Select an item from the menu on the left to get started.</p>
             </div>
         </main>
     </div>
