--- a/beanhub/src/main/resources/templates/Maintenance_attendant/login.html
+++ b/beanhub/src/main/resources/templates/Maintenance_attendant/login.html
@@ -6,7 +6,7 @@
     <title th:text = "#{attendant.login.title}">Attendant Login</title>
     <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
-<body>
+<body class="login-page">
 
     <div style="text-align: right; padding: 10px; position: absolute; top: 10px; right: 20px; z-index: 100;">
         <a th:href="@{?lang=it}" style="text-decoration: none; font-weight: bold;" th:text="#{lang.it}">🇮🇹 IT</a>
