--- a/beanhub/src/main/resources/templates/Customer/login.html
+++ b/beanhub/src/main/resources/templates/Customer/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" th:href="@{/css/style.css}">
 
 </head>
-<body>
+<body class="login-page">
 
 
     <div style="text-align: right; padding: 10px; position: absolute; top: 10px; right: 20px; z-index: 100;">
@@ -31,7 +31,7 @@
         </form>
         <p style = "text-align: center; margin-top: 15px;" th:inline = "text">
             [[#{customer.login.signup_prompt}]]
-            <a th:href ="@{/customer/signup}" th:text = "#{customer.login.signup_action}">Signup</a>
+            <a th:href ="@{/customer/signup}" th:text = "#{customer.login.signup_action}" class="signup-link">Signup</a>
         </p>
     </div>
 </body>
