--- a/beanhub/src/main/resources/templates/Customer/main.html
+++ b/beanhub/src/main/resources/templates/Customer/main.html
@@ -6,7 +6,7 @@
     <title th:text = "#{customer.main.title}">Customer Area</title>
     <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
-<body>
+<body class="customer-dashboard">
 
     <div style="text-align: right; padding: 10px; position: absolute; top: 10px; right: 20px; z-index: 100;">
         <a th:href="@{?lang=it}" style="text-decoration: none; font-weight: bold;" th:text="#{lang.it}">🇮🇹 IT</a>
